--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Akanksha Singh | Fitclub</title>
+    <title>Saurabh Shyam | Fitclub</title>
   </head>
   <body>
     <nav>
